force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__MatrixUseLongOutput__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MatrixUseLongOutput__c</fullName>
    <formula>( vlocity_cmt__MatrixRecordType__c = &apos;RowVersioned&apos; &amp;&amp; vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__VersionsWithLongOutputCount__c &gt; 0) ||  vlocity_cmt__UseLongOutput__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrix Use Long Output</label>
    <type>Checkbox</type>
</CustomField>