force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StartDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Date / Time</label>
    <type>DateTime</type>
</CustomField>