force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__UseLongOutput__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UseLongOutput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Long OutputData</label>
    <type>Checkbox</type>
</CustomField>